# web-page-to-markdown-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  web-page-to-markdown.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  webpagetomarkdown_sdk.py  webpagetomarkdown_types.py
py/core/: context.py  control.py  helpers.py  utility_type.py
py/entity/: convert_url_to_markdown_get_entity.py  convert_url_to_markdown_post_entity.py
py/feature/: log_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_convert_url_to_markdown_get_direct.py  test_convert_url_to_markdown_get_entity.py  test_convert_url_to_markdown_post_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_options.py  make_point.py  make_request.py  make_result.py  make_spec.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  prepare_path.py  result_basic.py  result_body.py  transform_request.py  transform_response.py
(+441 files in other folders)
